# modoo-marble-backend

./: .dockerignore  .env  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.txt  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
app/: config.py  constants.py  errors.py  main.py  models.py  presence.py  redis_client.py
app/dm/: socket_handlers.py
app/game/: __init__.py  board.py  enums.py  errors.py  game_rules.py  models.py  patch.py  presentation.py  reconnect.py  repository.py  rules.py  schemas.py  service.py  socket_handlers.py  state.py  sync_runtime.py  timer.py
app/lobby/: socket_handlers.py
app/models/: __init__.py  game.py  game_model.py  user.py  user_game.py  user_model.py
app/routers/: auth.py  game.py  lobby.py  users.py
app/schemas/: auth.py  lobby.py  users.py
app/services/: ai.py  auth.py  auth_service.py  game.py  game_result_service.py  room_service.py  users_service.py
app/sockets/: __init__.py  auth.py  dm.py  game.py  lobby.py
app/utils/: auth_dep.py  jwt.py  (+5 more)
deploy/: ec2-setup.sh  nginx.conf
tests/: conftest.py  test_game_result_service.py  test_game_socket_handlers.py  test_game_sync_runtime.py  test_game_timer.py  test_gameplay_flow.py  test_health.py  test_landmark_acquisition.py  test_lobby_router.py  test_main.py  test_room_service.py  test_ruleset_loader.py  test_users_router.py
(+30 files in other folders)
